# rviz_embed_test

./: CMakeLists.txt  package.xml
include/myviz/: myviz.hpp
src/: main.cpp  myviz.cpp  myviz.h
